--- a/TestApi/src/assets/base.css
+++ b/TestApi/src/assets/base.css
@@ -59,7 +59,7 @@
 }
 
 body {
-  min-height: 100vh;
+  min-block-size: 100vh;
   color: var(--color-text);
   background: var(--color-background);
   transition:
